--- a/SeeREAL/pom.xml
+++ b/SeeREAL/pom.xml
@@ -239,6 +239,18 @@
 		    <artifactId>javax.mail-api</artifactId>
 		    <version>1.6.2</version>
 		</dependency>
+		
+		<dependency>
+		 	<groupId>com.github.scribejava</groupId>
+		 	<artifactId>scribejava-core</artifactId>
+		 	<version>2.8.1</version>
+		</dependency>
+		<!-- 제이슨 파싱 -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 		       
 	</dependencies>
     <build>
